[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/LobbyRoom.gd" type="Script" id=1]
[ext_resource path="res://Fonts/slkscrb.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/slkscre.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/LANServerBroadcast/server_advertiser/ServerAdvertiser.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 50, 50 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 90, 40 )

[node name="LobbyRoom" type="Node2D"]
process_priority = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -5.00006
margin_top = -5.48016
margin_right = 1085.0
margin_bottom = 609.52
color = Color( 0.141176, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobbyname" type="Label" parent="."]
margin_left = 1.41418
margin_top = -14.3137
margin_right = 1082.41
margin_bottom = 125.686
custom_fonts/font = SubResource( 1 )
text = "Lobby Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PeopleConnected" type="Label" parent="."]
margin_left = -1.0
margin_top = 80.0
margin_right = 1081.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.647059, 0.937255, 0.67451, 1 )
text = "0/6 People Connected"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
margin_left = 6.19605
margin_top = 567.593
margin_right = 1083.19
margin_bottom = 595.593
custom_fonts/font = SubResource( 3 )
text = "Info GOes here ABT THe Server"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="advertiser" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Starttext" type="Label" parent="."]
margin_left = 1.0
margin_top = 503.122
margin_right = 1080.0
margin_bottom = 611.122
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.701961, 0.898039, 0.623529, 1 )
text = "Start"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitLabel" type="Label" parent="."]
margin_left = 973.0
margin_right = 1073.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.501961, 0.52549, 1 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 47.8776
margin_top = 153.0
margin_right = 1028.88
margin_bottom = 490.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TouchScreenButton" parent="."]
position = Vector2( 972.401, 2.99661 )
shape = SubResource( 6 )

[node name="Start" type="TouchScreenButton" parent="."]
position = Vector2( 447.994, 518.414 )
shape = SubResource( 7 )
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
